--- a/hw1/hw1.tex
+++ b/hw1/hw1.tex
@@ -1,4 +1,4 @@
-% Created 2024-02-02 Fri 11:07
+% Created 2024-02-04 Sun 23:13
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -44,7 +44,7 @@
 \usepackage{algpseudocode}
 \lstset{breaklines=true, basicstyle=\ttfamily\tiny, frame=single}
 \author{Miguel Gomez U1318856}
-\date{2024-02-02 11:07:53}
+\date{2024-02-04 23:13:21}
 \title{Homework Assignment \# 1}
 \hypersetup{
  pdfauthor={Miguel Gomez U1318856},
@@ -61,10 +61,10 @@
 
 
 \section{Homework 1}
-\label{sec:orgf7bfe6c}
+\label{sec:org3030e27}
 The extended euclidean algorithm is a spin on the usual algo that allows for us to split the number into two intermediate values. one that is equal to the number we are dividing in the algo multiplied by a number, and another that is the divisor multiplied by the quotient. This expression below is the one we end up with:
 \subsection{expression}
-\label{sec:org51ef5e0}
+\label{sec:orgdcb0893}
 \[
 \begin{align*}
 g &= gcd(a,b)\\
@@ -172,7 +172,7 @@ Execution Time: .028753389 seconds
 
 
 \subsection{Identify whether the integers 38 and 7 have multiplicative inverses in \mathcal{Z}\textsubscript{180}}
-\label{sec:org64d3918}
+\label{sec:orgf82d0a8}
 Since the number \(p\) we are working with is even, we will not have multiplicative inverses for even numbers. Therefore we only need to find the inverse for the one we can, for 7. 
 
 \[
@@ -221,10 +221,10 @@ Execution Time: .022770642 seconds
 Since the gcd for the expression comes out to 1, the inverse exists and is printed out. Since 38 is even, no inverse is possible modulo 180.
 
 \section{Problem 2}
-\label{sec:org617710b}
+\label{sec:orgb5585dc}
 Solving linear diophantine equations using linear congruences.
 \subsection{a) solving LC \(4x \equiv 4\ \text{mod}\ 6\)}
-\label{sec:org15943f8}
+\label{sec:orgf0f1d0e}
 Solving this is easiest with a table of the results we would get by plugging in any values for x from the set mod 6.
 
 \begin{center}
@@ -244,7 +244,7 @@ Solving this is easiest with a table of the results we would get by plugging in 
 \(\therefore\) we have exactly two solutions which are congruent for this problem.
 
 \subsection{Solving as an LDE instead}
-\label{sec:orgaba87d7}
+\label{sec:org40c25ad}
 using the expression \(4x \equiv 4\ \text{mod}\ 6\), we can transform the expression into the following:
 \begin{align*}
 4x &\equiv 4\ \text{mod}\ 6\\
@@ -262,8 +262,8 @@ Now we find values of $x$ that would allow the expression to be integer valued w
  k &= 2 
 \end{align*}
 
-\section{Problem 3}
-\label{sec:orgb987cf0}
+\section{Problem 3 - Affine Cipher}
+\label{sec:org756eb8c}
 We must find a solution to the affine cipher and obtain the keys \([k_1, k_2]\). We can set this up in singular to solve for the key vector using the inverse matrix algorithm that utilizes the transformation to a reduced row eschelon form of the matrix.
 
 
@@ -285,40 +285,105 @@ echo "Execution Time: $(echo "$end - $start" | bc) seconds"
                                                            0<
  by: W. Decker, G.-M. Greuel, G. Pfister, H. Schoenemann     \   May 2021
 FB Mathematik der Universitaet, D-67653 Kaiserslautern        \  Debian 1:4.2.1-p3+ds-1
+
 print matrix A
 18,1,
 19,1 
+
 print matrix B
 4,
 19
+
 Determinant of A:
 printing det(A)
 25
+
 gcd(det(A), 26) is:
 1
+
 inverse of A exists
 inverse of A:
-inv_A[1,1]=25
-inv_A[1,2]=1
-inv_A[2,1]=19
-inv_A[2,2]=8
+25,1,
+19,8 
 check of inv_A*A = I:
-_[1,1]=1
-_[1,2]=0
-_[2,1]=0
-_[2,2]=1
+1,0,
+0,1 
+
 Solutions for x = :
-_[1,1]=15
-_[2,1]=20
+15,
+20 
+
+K[1,1]=15
+K[2,1]=20
+
+Mapping given the keys is:
+A -> U
+B -> J
+C -> Y
+D -> N
+E -> C
+F -> R
+G -> G
+H -> V
+I -> K
+J -> Z
+K -> O
+L -> D
+M -> S
+N -> H
+O -> W
+P -> L
+Q -> A
+R -> P
+S -> E
+T -> T
+U -> I
+V -> X
+W -> M
+X -> B
+Y -> Q
+Z -> F
+
+Mapping back to plain text uses the reverse list
+U -> A
+J -> B
+Y -> C
+N -> D
+C -> E
+R -> F
+G -> G
+V -> H
+K -> I
+Z -> J
+O -> K
+D -> L
+S -> M
+H -> N
+W -> O
+L -> P
+A -> Q
+P -> R
+E -> S
+T -> T
+I -> U
+X -> V
+M -> W
+B -> X
+Q -> Y
+F -> Z
+
+The place where bob should meet on vacation is:
+NOVASCOTIA
+Canada should be nice in a few months.
 Auf Wiedersehen.
-Execution Time: .053407240 seconds
+Execution Time: .060540221 seconds
 \end{lstlisting}
 \]
 
-Shown above is the results and we see that the key \([k_1, k_2]\) is \([15, 20]\).
+Shown above is the results and we see that the key \([k_1, k_2]\) is \([15, 20]\) and Novascotia is the destination for the vacation.
 
 \section{Problem 4 - Hill Cypher}
-\label{sec:orgd1d1aab}
+\label{sec:org685340e}
 Considering the Hill Cypher, we are restricted to using only 8 letters. Therefore we must do everything modulo 8. Getting the encryption \(\mathbf{C} = \mathbf{P}\cdot \mathbf{K}\), and the decryption \(\mathbf{P} = \mathbf{C}\cdot \mathbf{K}^{-1}\)  will be done as follows:
 \[
 \mathbf{K} = \left(
@@ -328,16 +393,296 @@ k_{21}\ k_{22}
 \end{matrix}
 \right)
 \]
-
-
+\[
+\mathbf{P} = \left(
+\begin{matrix}
+P_{11}\ P_{12} \\
+P_{21}\ P_{22}
+\end{matrix}
+\right)
+\]
+To find our inverses, we must do the calculations modulo 8, which means we should employ the gcd method. If we can show the gcd of the determinant and the modulus is 1, then we can invert the matrix. First we tackle part a.
 
 
 \begin{itemize}
 \item[a)] Set up the problem as a system of linear congruences to identify $\mathbf{K}$.\\
+\[
+\left(\begin{matrix}
+2\cdot k_{11}+3\cdot k_{21}\ \ 2\cdot k_{12}+3\cdot k_{22}\\
+2\cdot k_{11}+5\cdot k_{21}\ \ 2\cdot k_{12}+5\cdot k_{22} 
+\end{matrix}\right) = 
+\left(\begin{matrix}
+4\ \ 5\\
+0\ \ 7 
+\end{matrix}\right)
+
+\begin{align*}
+2\cdot k_{11}+3\cdot k_{21} &= 4\ \text{mod}\ 8\\
+2\cdot k_{12}+3\cdot k_{22} &= 5\ \text{mod}\ 8\\
+2\cdot k_{11}+5\cdot k_{21} &= 0\ \text{mod}\ 8\\
+2\cdot k_{12}+5\cdot k_{22} &= 7\ \text{mod}\ 8
+\end{align*}
+\]
+
 \item[b)]Is the given matrix $\mathbf{P}$ invertible? Is the given matrix $\mathbf{C}$ invertible? In other words, can we
-We apply the encryption algorithm to the plaintext, character by character:
-compute the key as $\mathbf{C} \cdot \mathbf{P}^{−1} = \mathbf{K}$? \\
-\item[c)]  Does there exist a unique (one and only one) key matrix $\mathbf{K}$ that satisfies these constraints? If not, how many distinct matrices $\mathbf{K}$ can be used for this cipher?\\
-\item[d)]  Based on the above analysis, explain whether the above system is secure to a known-plaintext or a chosen-plaintext attack? [Note: A known-plaintext attack is one where some $(\mathbf{P}, \mathbf{C})$ pairs are known to Eve. A chosen-plaintext attack is similar to the known-plaintext one, except that the $(\mathbf{P}, \mathbf{C})$ pairs are chosen by the attacker herself.] \\
+We apply the encryption algorithm to the plaintext, character by character:\\
+The given matrix P is: \\
+\[
+\mathbf{P} = 
+\left(\begin{matrix}
+2\ \ 3\\
+2\ \ 5 
+\end{matrix}\right)
+\]
+The given matrix C is: \\
+\[
+\mathbf{C} = 
+\left(\begin{matrix}
+4\ \ 5\\
+0\ \ 7 
+\end{matrix}\right)
+\]
+Are the given matrices invertible? Can we compute the key as
+\[
+\mathbf{C} \cdot \mathbf{P}^{-1} = \mathbf{K}\text{ ?}\] \\
 \end{itemize}
+
+\subsection{a)}
+\label{sec:orge8764a5}
+\begin{verbatim}
+start=$(date +%s.%N)
+Singular sing/hw4.sing | grep -v -e \
+	    "\*\* loaded\|\*\* library\|\*\* redefining"
+end=$(date +%s.%N)
+echo "Execution Time: $(echo "$end - $start" | bc) seconds"
+\end{verbatim}
+
+\[
+\subsubsection{output of hw$4$ results}
+\begin{lstlisting}[language=Singular]
+                     SINGULAR                                 /  Development
+ A Computer Algebra System for Polynomial Computations       /   version 4.2.1
+                                                           0<
+ by: W. Decker, G.-M. Greuel, G. Pfister, H. Schoenemann     \   May 2021
+FB Mathematik der Universitaet, D-67653 Kaiserslautern        \  Debian 1:4.2.1-p3+ds-1
+Setting cores:
+12
+P:
+2,3,
+2,5 
+C
+4,5,
+0,7 
+expr1
+2*k11+3*k21,2*k12+3*k22,
+2*k11+5*k21,2*k12+5*k22 
+expr2
+2*k11+3*k21+4,2*k12+3*k22+5,
+2*k11+5*k21,  2*k12+5*k22+7 
+Determinant of P:
+printing det(P)
+4
+Determinant of C:
+printing det(C)
+4
+since the determinant of P and C are both outside of the star-set Z_{8^*}, they are not invertible.
+Exiting b/c gcd failed
+gcd(det(P), 8): 4
+inverse(P)
+// ** matrix is not invertible
+_[1,1]=0
+inverse(C)
+// ** matrix is not invertible
+_[1,1]=0
+Auf Wiedersehen.
+Execution Time: .046434783 seconds
+\end{lstlisting}
+\]
+
+Given the results here, the given matrices are not invertible. 
+
+\begin{itemize}
+\item[c)]  Does there exist a unique (one and only one) key matrix $\mathbf{K}$ that satisfies these constraints? If not, how many distinct matrices $\mathbf{K}$ can be used for this cipher?\\
+From my analysis in Singular and in Python, it seems there are 9 possible matrices mod 8 that would allow P to be encrypted as C. So there does not exist only one matrix which could do this.
+
+\begin{verbatim}
+start=$(date +%s.%N)
+Singular sing/hw4_method2.sing | grep -v -e \
+	    "\*\* loaded\|\*\* library\|\*\* redefining"
+end=$(date +%s.%N)
+echo "Execution Time: $(echo "$end - $start" | bc) seconds"
+\end{verbatim}
+
+
+\[
+\subsubsection{output of hw$4_{method2}$.sing results}
+\begin{lstlisting}[language=Singular]
+                     SINGULAR                                 /  Development
+ A Computer Algebra System for Polynomial Computations       /   version 4.2.1
+                                                           0<
+ by: W. Decker, G.-M. Greuel, G. Pfister, H. Schoenemann     \   May 2021
+FB Mathematik der Universitaet, D-67653 Kaiserslautern        \  Debian 1:4.2.1-p3+ds-1
+// ** but for functionality you may wish to change to the new
+// ** format. Please refer to the manual for further information.
+Setting cores:
+12
+G[1]=k22+7
+G[2]=k21+6
+G[3]=2*k12+3*k22+3
+G[4]=2*k11+3*k21+4
+For K to be invertible, the gcd of the determinant mod 8 and 8 should be 1.
+Since 8 is even, we expect only odd elements to have an inverse mod 8.
+gcd(1,8)= 1
+gcd(3,8)= 1
+gcd(5,8)= 1
+gcd(7,8)= 1
+We see that only odd elements have inveerses. Given our K, we can proceed if det(K) is in the set Z_8^*.
+1,1,
+6,1 
+det(K):3
+K matrix found by groebner gives determinant 3 which is in the star-set.
+The result of P*K:
+4,5,
+0,7 
+Which is equal to the  we expect to get:
+4,5,
+0,7 
+Auf Wiedersehen.
+Execution Time: .044736744 seconds
+\end{lstlisting}
+\]
+
+
+\begin{verbatim}
+start=$(date +%s.%N)
+python3 py/hw4_exhaustive.py 
+end=$(date +%s.%N)
+echo "Execution Time: $(echo "$end - $start" | bc) seconds"
+\end{verbatim}
+
+\[
+\subsubsection{output of hw$4_{method2}$.sing results}
+\begin{lstlisting}[language=Python]
+K matrix:
+[1 3]
+[6 5]
+det(K): 3
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+K matrix:
+[3 1]
+[2 1]
+det(K): 1
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+K matrix:
+[3 3]
+[2 5]
+det(K): 1
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+K matrix:
+[3 7]
+[2 5]
+det(K): 1
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+K matrix:
+[5 1]
+[6 1]
+det(K): 7
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+K matrix:
+[5 5]
+[6 1]
+det(K): 7
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+K matrix:
+[5 7]
+[6 5]
+det(K): 7
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+K matrix:
+[7 3]
+[2 5]
+det(K): 5
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+K matrix:
+[7 7]
+[2 5]
+det(K): 5
+gcd_mod_det: 1
+The result of P*K which is equal to the C we expect to get:
+[4 5]
+[0 7]
+The total number of possible matrices is: 4096
+the final invertible count is           : 1992
+the # of final C being correct is       : 9
+number possible should be 8^4: 4096
+Therefore, the total number of invertible matrices that can 
+produce C is: 9
+percentage of solutions vs total number: 0.220 %
+Execution Time: .285150142 seconds
+\end{lstlisting}
+\]
+
+
+\begin{itemize}
+\item[d)]  Based on the above analysis, explain whether the above system is secure to a known-plaintext or a chosen-plaintext attack? [Note: A known-plaintext attack is one where some $(\mathbf{P}, \mathbf{C})$ pairs are known to Eve. A chosen-plaintext attack is similar to the known-plaintext one, except that the $(\mathbf{P}, \mathbf{C})$ pairs are chosen by the attacker herself.] \\
+Given how quickly were able to find the results here in Python or Singular, I would think this method is not very safe against a plain text attack. Here I was able to locate a set of keys that are invertible, which convert $\mathbf{C} = \mathbf{P}\cdot\mathbf{K}$. One could then find some invertible matrix P and feed that to the encryptor to get C. That C could be multiplied by $P^{-1}$ to get K back. 
+
+
+\begin{verbatim}
+start=$(date +%s.%N)
+python3 py/hw4_plaintext_inv.py 
+end=$(date +%s.%N)
+echo "Execution Time: $(echo "$end - $start" | bc) seconds"
+\end{verbatim}
+
+
+\[
+\subsubsection{output of hw$4_{method2}$.sing results}
+\begin{lstlisting}[language=Python]
+P: 
+[[2 3]
+ [2 5]]
+K: 
+[[3 1]
+ [2 1]]
+P_att_inv: 
+[[4. 7.]
+ [1. 2.]]
+C: 
+[[4 5]
+ [0 7]]
+C_attac: 
+[[0 3]
+ [5 3]]
+P^-1*C = P^-1*P*K = K: 
+[[6.5  1.5 ]
+ [4.75 5.75]]
+Execution Time: .226528343 seconds
+\end{lstlisting}
+\]
+Given this result, it would seem that it may be more difficult to obtain something that works when finding the inverse modulo 8. I would expect that this is faily close, but I am still missing something in the python methods that prevent the solution from working out exactly the correct process for attacking this and showing the recalculation of the keys. 
 \end{document}
